# basics

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: FindCMocka.cmake
docs/: mainpage.dox
tests/: CMakeLists.txt  first_test.c
